Mobile: Fixed overlapping elements on Enrollment Video page
NavBar icon overlapped page heading, and the video overlapped address
text underneath it

--- a/css/style.css
+++ b/css/style.css
@@ -1016,6 +1016,13 @@ blockquote {
 #enrollmentMain h3 { /*Dallin*/
     margin-top: 0px; padding-top:0px;
 }
+
+@media only screen and (max-width: 479px){
+	.enrollmentMain{
+		margin-top: 40px;
+	}
+	
+}
 .contactUs { /*Dallin*/
     font-weight: bold;
     letter-spacing: 4px;
@@ -1210,7 +1217,7 @@ blockquote {
     padding-right: 0;
     padding-bottom: 0;
     height: 400px;
-    margin-bottom: -28px;
+    margin-bottom: -12px; /* Used to be -28px in case it needs to be changed back */
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
